# clip-extractor

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/workflows/: release.yml
fixtures/: transcript.txt
prototype/: transcribe.py  words.py
src/: app.rs  audio.rs  download.rs  export.rs  main.rs  model.rs  resources.rs  transcribe.rs
