[package]
name = "clip-extractor"
version = "0.1.0"
edition = "2021"
description = "Transcribe a media file, browse the transcript, select a clip, and export it."

[dependencies]
eframe = "0.28"
egui = "0.28"
rfd = "0.14"               # native open/save file dialogs
crossbeam-channel = "0.5"  # worker -> UI messaging for long-running jobs
symphonia = { version = "0.5", features = ["all"] }  # decode -> waveform + PCM
whisper-rs = "0.16"        # transcription (whisper.cpp bindings); needs CMake to build
ureq = "2"                 # blocking HTTPS for on-demand model download (no async runtime)
rodio = { version = "0.19", default-features = false }  # preview playback of the selected range

[features]
# Embed ffmpeg + yt-dlp + the base whisper model into the binary and extract
# them to the cache dir at runtime, for a single self-contained executable.
# Off by default so dev builds stay fast; release/CI builds enable it and must
# populate `vendor/<target-triple>/` and `models/` first (see ARCHITECTURE.md).
embed-assets = []

[profile.release]
opt-level = 3

# Workaround for a debug-only crash on recent macOS: objc2 0.4.1 (pulled in via
# eframe 0.28 -> winit 0.29 -> icrate) runs a `#[cfg(debug_assertions)]` ObjC
# method-signature check that panics enumerating `NSScreen` at launch
# ("expected return type code 'q', but found 'Q'"). Compiling objc2 without
# debug assertions removes the check while keeping them on for our own code, so
# plain `cargo run` works without needing --release.
[profile.dev.package.objc2]
debug-assertions = false
